# Day

./: LICENSE  hello.py  pyproject.toml
.dvc/: config
dvclive/: params.yaml
experiments/: mynotebook.ipynb
logging_module_prac/: l1.py  l2.py
src/: data_preprocessing.py  model_evaluation.py
yaml_prac/: y1.yaml
